--- a/Brambillator.CulturedMedia.Tests/Brambillator.CulturedMedia.Tests.csproj
+++ b/Brambillator.CulturedMedia.Tests/Brambillator.CulturedMedia.Tests.csproj
@@ -1,16 +1,13 @@
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="**\*.cs" />
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.App">
       <Version>1.0.1</Version>
@@ -29,6 +26,10 @@
       <Version>2.2.0-beta4-build1188</Version>
     </PackageReference>
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Brambillator.CulturedMedia.Domain\Brambillator.CulturedMedia.Domain.csproj" />
+    <ProjectReference Include="..\Brambillator.CulturedMedia.Repositories\Brambillator.CulturedMedia.Repositories.EF.csproj" />
+    <ProjectReference Include="..\Brambillator.CulturedMedia.Service\Brambillator.CulturedMedia.Service.csproj" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
