New tests and reference
Added new commands to console.
Replaced .dll reference to a package reference (package must be created for Brambillator.Infrastructure.

--- a/Brambillator.CulturedMedia.Domain/Brambillator.CulturedMedia.Domain.csproj
+++ b/Brambillator.CulturedMedia.Domain/Brambillator.CulturedMedia.Domain.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="Brambillator.Infrastructure.Domain">
-      <HintPath>..\..\References\Brambillator.Infrastructure.Domain.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Brambillator.Infrastructure.Domain" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
