--- a/Brambillator.CulturedMedia.Service/Brambillator.CulturedMedia.Service.csproj
+++ b/Brambillator.CulturedMedia.Service/Brambillator.CulturedMedia.Service.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
