--- a/Brambillator.CulturedMedia.ConsoleApp/Brambillator.CulturedMedia.ConsoleApp.csproj
+++ b/Brambillator.CulturedMedia.ConsoleApp/Brambillator.CulturedMedia.ConsoleApp.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Brambillator.CulturedMedia.Service\Brambillator.CulturedMedia.Service.csproj" />
   </ItemGroup>
 
