--- a/Brambillator.CulturedMedia.ConsoleApp/Brambillator.CulturedMedia.ConsoleApp.csproj
+++ b/Brambillator.CulturedMedia.ConsoleApp/Brambillator.CulturedMedia.ConsoleApp.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
   </ItemGroup>
 
